--- a/platform/doc/99100-ReleaseNotes.page
+++ b/platform/doc/99100-ReleaseNotes.page
@@ -1,6 +1,20 @@
 POCO C++ Libraries Release Notes
 AAAIntroduction
 
+!!!Release 1.10.1
+
+!!Summary of Changes
+
+  - Upgraded bundled SQLite to version 3.31.1.
+  - GH #2894: Poco 1.10.0 doesn't build with cmake & POCO_UNBUNDLED
+  - GH #2898: poco 1.10/ NetSSL / openssl < 1.1 : default server usage changed (compare to 1.9.4)
+  - GH #2834: Wrong cancelation of the fix: incorrect type of store name parameter in
+    CertOpenStore API call into NetSSL_Win. Release 1.10.0
+  - GH #2791: allow pre-allocation of the buffer in Poco::LogStreamBuf.
+  - GH #2816: Modernise TLS configuration
+  - GH #2818: Add getSpecifiedPort() method in Poco::URI.
+
+
 !!!Release 1.10.0
 
 !!Summary of Changes
